<resources>
    <string name="app_name">AdMonitor</string>
    <string name="input_email_hint">请输入邮箱</string>
    <string name="input_phone_hint">请输入手机号</string>
    <string name="input_code_hint">请输入验证码</string>
    <string name="input_username_hint">请输入用户名</string>
    <string name="get_code_button">获取验证码</string>
    <string name="login_button">登录</string>
    <string name="regist_button">注册</string>
</resources>
